2005-07-31  Esteban Sanchez  <esteban@steve-o.org>

	* src/buoh-comic-list.c: Change label to "Comic list".
	Remove the shadow of the GtkFrame and added a border.

2005-07-30  Carlos Garcia Campos  <carlosgc@gnome.org>

	* src/Makefile.am:
	* src/buoh-comic-loader.[ch]: Added

	* src/buoh-view.[ch], src/buoh-window.[ch]: Remove view status. 
	We only need to know the current page of the view, the comic load 
	status it's now in the BuohComicLoader object.
	Use a thread for the comic loading stuff.

2005-07-29  Carlos Garcia Campos  <carlosgc@gnome.org>

	* src/buoh-view.c: Remove buoh_view_check_comic_uri, it's slow and we
	don't really need it

2005-07-27  Esteban Sanchez <esteban@steve-o.org>

	* NEWS, AUTHORS, MANTAINERS, README: Updated
	
2005-07-26  Carlos Garcia Campos  <carlosgc@gnome.org>

	* src/buoh-window.c: Add callback for the properties comic menu item

	* TODO: updated

2005-07-26  Carlos Garcia Campos  <carlosgc@gnome.org>

	* interfaces/buoh.glade: Remove Edit menu. Move Properties menuitem
	from Edit to Comic menu

2005-07-25  Carlos Garcia Campos  <carlosgc@gnome.org>

	* TODO: Updated

2005-07-25  Carlos Garcia Campos  <carlosgc@gnome.org>

	* src/buoh-comic.[ch]: Added
	* src/comic.[ch]: Removed
	* src/Makefile.am:
	* src/buoh-comic-list.c:
	* src/buoh-properties-dialog.[ch]:
	* src/buoh-view.[ch]:
	* src/buoh-window.c:
	* src/buoh.c:
	* src/comic-simple.[ch]:

	s/Comic/BuohComic/ 
	More code cleanup
	
2005-07-25  Carlos Garcia Campos  <carlosgc@gnome.org>

	* configure.in, src/Makefile.am: Cleanup

2005-07-25  Carlos Garcia Campos  <carlosgc@gnome.org>

	* src/buoh-add-comic-dialog.[ch]:
	* src/buoh-comic-list.[ch]:
	* src/buoh-properties-dialog.[ch]:
	* src/buoh-view.[ch]:
	* src/buoh-window.[ch]:
	* src/Makefile.am:

	New files added for the new design

	* interfaces/buoh.glade: Some UI changes needed for the new design.
	Some widgets are created now in the code.

	* src/buoh.[ch], src/comic.h, src/main.c: Change to an OO design. Many